# XYZ

./: .gitignore
Cuda/: Cuda.sln  toolkit.bat  toolkit12.1.bat
Cuda/SPc/: SP.cu  SP.cuh  SPc.vcxproj  SPc.vcxproj.filters  main.cpp  main.cu
Cuda/SPc/cu/: BMP.cpp  BMP.cu  BMP.cuh  BMP.h  Elapse.hpp  FFT.cpp  FFT.h  GPU.cpp  GPU.h  Utils.cpp  Utils.h  buffer.hpp  defines.h  device.h  global.cpp  global.h  helper_math.h  version.h
HelloWorldCL/: CMakeLists.txt
HelloWorldCL/src/: main.cpp
HelloWorldCL/src/cl/: Buffer.hpp  Context.cpp  Context.h  Program.cpp
HelloWorldCL/src/kernels/: main.cl
Plot/: index.html  main.ts  tsconfig.json
Plot/scripts/: plot.js  plot.js.map
Plot/src/: App.ts  Buffer.ts  Canvas.ts  Colors.ts  FileSystemAccess.ts  INode.ts  Mat3.ts  Program.ts  RNode.ts  Shaders.ts  glo.ts
Plot/src/Nodes/: Grid.ts  INode.ts  Lines.ts  Quad.ts  RNode.ts  Signal.ts
Plot/src/shaders/: bk.ts  derivative.ts  energy.ts  grid.ts  magnitude.ts  reg.ts  regc.ts  signal.ts  unf.ts
PlotX/: CMakeLists.txt
PlotX/assets/: layout.xml
PlotX/assets/shaders/: BorderLine.frag  BorderLine.geom  BorderLine.vert  version430.glsl
PlotX/src/: defines.h  main.cpp
PlotX/src/gl/: Buffer.cpp  Buffer.h  Format.cpp  Format.h  Program.cpp  Program.h  ResourceManager.cpp  ResourceManager.h  Trace.cpp  Trace.h  Utils.cpp  Utils.h  Wnd.cpp  Wnd.h  Xml.h  defines.h  file.cpp  file.h  vec.h
PlotX/src/ui/: Container.cpp  Container.h  Control.cpp  Control.h  IWnd.cpp  IWnd.h  Node.cpp  Node.h  Wnd.cpp  Wnd.h  gui.cpp  gui.h
PlotX/src/utils/: Factory.hpp  Trace.cpp  Trace.h  Utils.cpp  Utils.h  Xml.cpp  Xml.h  file.cpp  file.h  vec.h
SP/: CMakeLists.txt
SP/src/: main.cpp
SP/src/cl/: Buffer.hpp  Context.cpp  Context.h  Elapse.hpp  FFT.cpp  FFT.h  Program.cpp  Program.h  defines.h
SP/src/kernels/: main.cl
SP/src/net/: BinBuffer.hpp  Socket.cpp  Socket.h  Utils.hpp  WSProcessor.cpp  WSProcessor.h  WSServer.h
data/: Chann_current3.32fc  Chann_current4.32fc  Chann_out1.32fc  Chann_prev2.32fc  FFT_IN0.32fc  FFT_IN4.32fc  FILTER.32fc  FIR_CURRENT0.32fc  FIR_CURRENT4.32fc  FIR_PREV0.32fc  FIR_PREV4.32fc  FIR_SAMPLES_PREV3.32fc  Input1.32fc  Input2.32fc  Input3.32fc  NEW_FIR_OUT0.32f
data/Bluritsamples/: Test0_1024x248_stft_blocks_num_13.32fc  Test0_1024x492_stft_blocks_num_14.32fc  Test0_128x1956_stft_blocks_num_1.32fc  Test0_128x3908_stft_blocks_num_2.32fc  Test0_2048x124_stft_blocks_num_17.32fc  Test0_2048x248_stft_blocks_num_18.32fc  Test0_256x1956_stft_blocks_num_6.32fc  Test0_256x980_stft_blocks_num_5.32fc  Test0_4096x124_stft_blocks_num_22.32fc  Test0_4096x64_stft_blocks_num_21.32fc  Test0_512x492_stft_blocks_num_9.32fc  Test0_512x980_stft_blocks_num_10.32fc  Test0_dechirp_num_1.32fc  Test0_dechirp_num_10.32fc  Test0_dechirp_num_11.32fc  Test0_dechirp_num_12.32fc  Test0_dechirp_num_13.32fc  Test0_dechirp_num_14.32fc  Test0_dechirp_num_15.32fc  Test0_dechirp_num_16.32fc  Test0_dechirp_num_17.32fc  Test0_dechirp_num_18.32fc  Test0_dechirp_num_19.32fc  Test0_dechirp_num_2.32fc  Test0_dechirp_num_20.32fc  Test0_dechirp_num_21.32fc  Test0_dechirp_num_22.32fc  Test0_dechirp_num_23.32fc  Test0_dechirp_num_24.32fc  Test0_dechirp_num_3.32fc  Test0_dechirp_num_4.32fc  Test0_dechirp_num_5.32fc  Test0_dechirp_num_6.32fc  Test0_dechirp_num_7.32fc  Test0_dechirp_num_8.32fc  Test0_dechirp_num_9.32fc  Test0_decimated_num_10.32fc  Test0_decimated_num_21.32fc  Test0_decimated_num_3.32fc  chirp1.32fc  (+6 more)
data/spiderman/: fir2.32f  fir4.32f  fir8.32f
data/spiderman/1/: dechirp1.32fc  dechirp10.32fc  dechirp11.32fc  dechirp12.32fc  dechirp13.32fc  dechirp14.32fc  dechirp15.32fc  dechirp16.32fc  dechirp17.32fc  dechirp18.32fc  dechirp19.32fc  dechirp2.32fc  dechirp20.32fc  dechirp21.32fc  dechirp22.32fc  dechirp23.32fc  dechirp24.32fc  dechirp3.32fc  dechirp4.32fc  dechirp5.32fc  dechirp6.32fc  dechirp7.32fc  dechirp8.32fc  dechirp9.32fc  decimate16.32fc  decimate17.32fc  decimate2.32fc  decimate3.32fc  stft1.32fc  stft10.32fc  stft13.32fc  stft14.32fc  stft17.32fc  stft18.32fc  stft2.32fc  stft21.32fc  stft22.32fc  stft5.32fc  stft6.32fc  stft9.32fc
data/superman/: ABS_IN1.32fc  ABS_IN3.32fc  Chann_current2.32fc  Chann_out2.32fc  Chann_prev0.32fc  Chann_prev1.32fc  FFT_IN3.32fc  FFT_OUT0.32fc  FFT_OUT2.32fc  FFT_OUT4.32fc  FIR_CURRENT1.32fc  FIR_OUT4.32fc  Input0.32fc  Input4.32fc  NEW_FIR_OUT1.32f  NEW_FIR_OUT2.32f  NEW_FIR_OUT3.32f
